fix(agent): improve fd/rg option detection for combined flags
- Detect combined short options like -HI, -IH, -uH, -xHI, -HL
- Add --follow/-L option detection for both fd and rg
- Simplify regex patterns for better maintainability
- Add comprehensive test cases for all combinations

Co-authored-by: Agent by iinm <agent-by-iinm+claude-sonnet-thinking-32k-max@localhost>

--- a/agent/.config/config.predefined.json
+++ b/agent/.config/config.predefined.json
@@ -15,7 +15,7 @@
           "command": "fd",
           "args": {
             "$has": {
-              "$regex": "^(--unrestricted|-u|--no-ignore|-I|--exec|-x|--exec-batch|-X)(=.+)?$"
+              "$regex": "^(--unrestricted|--no-ignore|--exec|--exec-batch|--follow|-[^-]*[uIxXL])"
             }
           }
         },
@@ -26,7 +26,9 @@
         "input": {
           "command": "rg",
           "args": {
-            "$has": { "$regex": "^(--unrestricted|-u|--no-ignore)(=.+)?$" }
+            "$has": {
+              "$regex": "^(--unrestricted|--no-ignore|--follow|-[^-]*[uL])"
+            }
           }
         },
         "action": "ask"
